lab1/Test/L1-A-12-46.output
Error Type B at Line 6
Error Type B at Line 9
Error Type A at Line 21
Error Type B at Line 42
Error Type A at Line 51
