lab1/Test/L1-A-12-46.cmm
struct Sagc8fmF5hsUk {
};
struct Xh13fIseyBSuDwSQ d8dOzp9LjQ9X0DkLC ( int hHIXqd8Tz 
  ) {
  float naDnxo6RyQ [ 2089462019 ] = WLW1WGoFw ;
  if ( ur2qez0f   return KisQTUrCUoeQMYVI ;
else   if ( djcO4xfO )   if ( jhlMHnJfb )   a || aFssFe2Zo2o 
    >= J7DUbxmgJQvie5Cz - ERwal8sx ( Ix = ju && TQqnfVadqQI 
    <= Y5Wn05uClZXNnT / X1GA [ BGiXPofjQ7M = || noHTD7rLGilpxgB89Fq 
    > LLwE5I * ! ! S0NAxX ( er_JULXj4AqbV != R * - KUBL6BlNsnqKFZ 
    ( wqgw1CnVJNJ , BlUFScOq3bJ0U4 = z5YG4JucvaM6aK48E 
    && k_tCmUM82bPH < U5wgIiVMj0qm81fMoE + ( DjjyhhANW 
    ) ) , ! 2036012683 ) == - 943222080.509670290 + NjrpU0zqj3 
    ] * ! - - hjAxVvrFPMpEczJ34 ( ) ) . wilYtQXBRS4as 
    ;
else {
  }


}
\int G7h5HF1YGQGGYBbh9J 
;
struct p ;
int ;
int ;
struct {
  struct {
    int IGBf6 ;
    int iduCMV5F3iYf7cv ;
    int KpYxp8mKBQuF ;
    struct cyayKRIHo9r8lRNBfJU VEXPDXzpTbLyZvJAqLX 
      ;
  }oT27jKY , S52oBD1znlIgfl6Xe ;
};
struct fI ;
int ;
int ;
int SuzSYSkO ( ) {
}
int ;
int ;
int afA_F1 ( {
  while ( v )   cY9tMPP1Lwl6iBsLqJS7 ;

}
int ;
int tlaK6AId , vZ5NjdU7eAVX1 

;
int ;
int L9ZVUhtSELsb ( int fk3 , int aR6UwCbk1K0CBWE '
  ) {
}
